# stsci.skypac

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  Jenkinsfile  LICENSE.txt  MANIFEST.in  README.md  RECON-INFO  defsetup.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
doc/: environment.yml
doc/source/: bresenham.rst  computeSky.rst  conf.py  index.rst  pamutils.rst  parseat.rst  region.rst  skyline.rst  skymatch.rst  skystatistics.rst  utils.rst
docs/: .rtd-environment.yml  Makefile  conf.py  index.rst
docs/source/: LICENSE.rst  conf.py  index.rst  pamutils.rst  parseat.rst  region.rst  skyline.rst  skymatch.rst  skystatistics.rst  utils.rst
lib/: __init__.py  bresenham.py  computeSky.py  parseat.py  skymatch.help  skymatch.py  skystatistics.py
lib/pars/: skymatch.cfg  skymatch.cfgspc
src/stsci/skypac/: __init__.py  hstinfo.py  parseat.py  region.py  skyline.py
src/stsci/skypac/pars/: skymatch.cfgspc
stsci/skypac/: __init__.py  hstinfo.py  pamutils.py  parseat.py  region.py  skyline.py  skymatch.help  skymatch.py  skystatistics.py  utils.py
stsci/skypac/htmlhelp/: LICENSE.html  genindex.html  index.html  objects.inv  pamutils.html  parseat.html  py-modindex.html  region.html  search.html  searchindex.js  skyline.html  skymatch.html  skystatistics.html  utils.html
stsci/skypac/htmlhelp/_sources/: index.rst.txt  parseat.txt  region.txt  skyline.rst.txt  skymatch.txt  skystatistics.rst.txt
stsci/skypac/htmlhelp/_static/: documentation_options.js
stsci/skypac/pars/: skymatch.cfg  skymatch.cfgspc
