[metadata]
package_name = stsci.skypac
description = Sky matching on image mosaic
long_description = README.md
author = Mihai Cara, Warren Hack, Pey Lian Lim
author_email = help@stsci.edu
license = BSD-3-Clause
version-date = 26-January-2019
version = 1.0.1
edit_on_github = False
github_project = spacetelescope/stsci.skypac
description-file = README.md
url = https://github.com/spacetelescope/stsci.skypac
homepage = https://github.com/spacetelescope/stsci.skypac

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pep8]
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902,E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902,E201,E202,E203,E211,E221,E222,E223,E224,E225,E226,E227,E228,E231,E241,E242,E251,E271,E272,E273,E274
exclude = extern,sphinx,*parsetab.py

[pytest]
minversion = 2.2
addopts = --ignore=build
norecursedirs = build docs/_build relic

[entry_points]

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=0
