[metadata]
package_name = stsci.skypac
description = Sky matching on image mosaic
long_description = README.md
author = Mihai Cara, Warren Hack, Pey Lian Lim
author_email = help@stsci.edu
license = BSD-3-Clause
edit_on_github = False
github_project = spacetelescope/stsci.skypac
description-file = README.md
url = https://github.com/spacetelescope/stsci.skypac
homepage = https://github.com/spacetelescope/stsci.skypac

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[flake8]
count = True
doctests = True
show_source = True
statistics = True
exclude =
	.git,
	__pycache__,
	docs/source/conf.py,
	build,
	dist,
	extern,
	sphinx,
	*parsetab.py,
ignore =
	E501,
	E402,
	F403,
	W504

[tool:pytest]
minversion = 3.0
addopts = --ignore=build
norecursedirs = build docs/_build relic
doctest_plus = enabled
doctest_optionflags= NORMALIZE_WHITESPACE ELLIPSIS FLOAT_CMP
junit_family = xunit2

[entry_points]

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=0
